20080530
	issue 91: _declspec changed to __declspec in Nt files
	issue 92: argv0 declaration changed to extern from static in emu/Nt/win.c
20080529
	limbo/stubs.c: allow pick adt types
20080528
	emu/port/win-x11a.c screen depth checks from drawterm via tim@nop.cx
20080524
	add missing NetBSD files
20080522
	dis/lib/msgio.dis appl/lib/msgio.b - fix incorrect check for 16rFF
	add OpenBSD changes from tim@nop.cx (more changes to follow shortly that cause changes elsewhere)
20080416
	fix emu/Nt/os.c use of wrong name for null value
	move win/win-x11a references to emu/*/emu config files from emu/*/mkfile
20080415
	googlecode update with correct dis files for acme
	tidier code for hoststderr
	emu/port/win-x11a.c changes that attempt to satisfy libxcb's locking requirements
20080322
	enable hoststderr, following acme-sac
20080319
	ip/sntp neither read nor set the time correctly
20080311
	in appl/lib/names.b define "" as valid prefix for anything
20080304
	auth/secstore uses dial module
20080210
	add auth/dsagen
20080204
	emu/*/*ipif*.c and devip.c: try to allow local address to be set (changes so_bind signature in emu/ip.h)
20080201
	change foldbranch in limbo/gen.c to prevent loss of `no return value' diagnostics
20080131
	update emu/Nt/^(os.c ie-os.c ie-win.c ie emu), but properly this time [issue 81]
	remove _USE_32BIT_TIME_T from Nt/386/include/lib9.h, and time() def'n from emu/Nt/*.c [issue 81]
20080130
	failed to return nil from Jvalue.get in appl/lib/json.b if member name didn't match
	similar problem in appl/lib/ubfa.b
	add msgio(2)
20080124
	fix emu/port/devssl.c os/port/devssl.c not to keep the directory numbers(!)
20080122
	update appl/lib/db.b: allow for split i/o on pipes or tcp/ip; eliminate lock process
	eliminate more unused identifier warnings (courtesy acme-sac)
20080121
	skip trailing '=' in b64 rep of IPint
20080120
	forgot to push updated appl/lib/x509.b during keyring changes
20080116
	add rsa to factotum
	set but not used changes from Acme-sac